language-bindings/python/src/wamr/wamrapi/iwasm.py


# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 576
if _libs["../libs/libiwasm.so"].has("wasm_func_get_param_count", "cdecl"):
    wasm_func_get_param_count = _libs["../libs/libiwasm.so"].get("wasm_func_get_param_count", "cdecl")
    wasm_func_get_param_count.argtypes = [wasm_function_inst_t, wasm_module_inst_t]
    wasm_func_get_param_count.restype = uint32_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 588
if _libs["../libs/libiwasm.so"].has("wasm_func_get_result_count", "cdecl"):
    wasm_func_get_result_count = _libs["../libs/libiwasm.so"].get("wasm_func_get_result_count", "cdecl")
    wasm_func_get_result_count.argtypes = [wasm_function_inst_t, wasm_module_inst_t]
    wasm_func_get_result_count.restype = uint32_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 599
if _libs["../libs/libiwasm.so"].has("wasm_func_get_param_types", "cdecl"):
    wasm_func_get_param_types = _libs["../libs/libiwasm.so"].get("wasm_func_get_param_types", "cdecl")
    wasm_func_get_param_types.argtypes = [wasm_function_inst_t, wasm_module_inst_t, POINTER(wasm_valkind_t)]
    wasm_func_get_param_types.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 611
if _libs["../libs/libiwasm.so"].has("wasm_func_get_result_types", "cdecl"):
    wasm_func_get_result_types = _libs["../libs/libiwasm.so"].get("wasm_func_get_result_types", "cdecl")
    wasm_func_get_result_types.argtypes = [wasm_function_inst_t, wasm_module_inst_t, POINTER(wasm_valkind_t)]
    wasm_func_get_result_types.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 625
if _libs["../libs/libiwasm.so"].has("wasm_runtime_create_exec_env", "cdecl"):
    wasm_runtime_create_exec_env = _libs["../libs/libiwasm.so"].get("wasm_runtime_create_exec_env", "cdecl")
    wasm_runtime_create_exec_env.argtypes = [wasm_module_inst_t, uint32_t]
    wasm_runtime_create_exec_env.restype = wasm_exec_env_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 634
if _libs["../libs/libiwasm.so"].has("wasm_runtime_destroy_exec_env", "cdecl"):
    wasm_runtime_destroy_exec_env = _libs["../libs/libiwasm.so"].get("wasm_runtime_destroy_exec_env", "cdecl")
    wasm_runtime_destroy_exec_env.argtypes = [wasm_exec_env_t]
    wasm_runtime_destroy_exec_env.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 651
if _libs["../libs/libiwasm.so"].has("wasm_runtime_get_exec_env_singleton", "cdecl"):
    wasm_runtime_get_exec_env_singleton = _libs["../libs/libiwasm.so"].get("wasm_runtime_get_exec_env_singleton", "cdecl")
    wasm_runtime_get_exec_env_singleton.argtypes = [wasm_module_inst_t]
    wasm_runtime_get_exec_env_singleton.restype = wasm_exec_env_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 674
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_start_debug_instance_with_port", "cdecl"):
        continue
    wasm_runtime_start_debug_instance_with_port = _lib.get("wasm_runtime_start_debug_instance_with_port", "cdecl")
    wasm_runtime_start_debug_instance_with_port.argtypes = [wasm_exec_env_t, c_int32]
    wasm_runtime_start_debug_instance_with_port.restype = uint32_t
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 680
for _lib in _libs.values():
    if not _lib.has("wasm_runtime_start_debug_instance", "cdecl"):
        continue
    wasm_runtime_start_debug_instance = _lib.get("wasm_runtime_start_debug_instance", "cdecl")
    wasm_runtime_start_debug_instance.argtypes = [wasm_exec_env_t]
    wasm_runtime_start_debug_instance.restype = uint32_t
    break

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 695
if _libs["../libs/libiwasm.so"].has("wasm_runtime_init_thread_env", "cdecl"):
    wasm_runtime_init_thread_env = _libs["../libs/libiwasm.so"].get("wasm_runtime_init_thread_env", "cdecl")
    wasm_runtime_init_thread_env.argtypes = []
    wasm_runtime_init_thread_env.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 701
if _libs["../libs/libiwasm.so"].has("wasm_runtime_destroy_thread_env", "cdecl"):
    wasm_runtime_destroy_thread_env = _libs["../libs/libiwasm.so"].get("wasm_runtime_destroy_thread_env", "cdecl")
    wasm_runtime_destroy_thread_env.argtypes = []
    wasm_runtime_destroy_thread_env.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 707
if _libs["../libs/libiwasm.so"].has("wasm_runtime_thread_env_inited", "cdecl"):
    wasm_runtime_thread_env_inited = _libs["../libs/libiwasm.so"].get("wasm_runtime_thread_env_inited", "cdecl")
    wasm_runtime_thread_env_inited.argtypes = []
    wasm_runtime_thread_env_inited.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 717
if _libs["../libs/libiwasm.so"].has("wasm_runtime_get_module_inst", "cdecl"):
    wasm_runtime_get_module_inst = _libs["../libs/libiwasm.so"].get("wasm_runtime_get_module_inst", "cdecl")
    wasm_runtime_get_module_inst.argtypes = [wasm_exec_env_t]
    wasm_runtime_get_module_inst.restype = wasm_module_inst_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 731
if _libs["../libs/libiwasm.so"].has("wasm_runtime_set_module_inst", "cdecl"):
    wasm_runtime_set_module_inst = _libs["../libs/libiwasm.so"].get("wasm_runtime_set_module_inst", "cdecl")
    wasm_runtime_set_module_inst.argtypes = [wasm_exec_env_t, wasm_module_inst_t]
    wasm_runtime_set_module_inst.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 755
if _libs["../libs/libiwasm.so"].has("wasm_runtime_call_wasm", "cdecl"):
    wasm_runtime_call_wasm = _libs["../libs/libiwasm.so"].get("wasm_runtime_call_wasm", "cdecl")
    wasm_runtime_call_wasm.argtypes = [wasm_exec_env_t, wasm_function_inst_t, uint32_t, POINTER(uint32_t)]
    wasm_runtime_call_wasm.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 776
if _libs["../libs/libiwasm.so"].has("wasm_runtime_call_wasm_a", "cdecl"):
    wasm_runtime_call_wasm_a = _libs["../libs/libiwasm.so"].get("wasm_runtime_call_wasm_a", "cdecl")
    wasm_runtime_call_wasm_a.argtypes = [wasm_exec_env_t, wasm_function_inst_t, uint32_t, POINTER(wasm_val_t), uint32_t, POINTER(wasm_val_t)]
    wasm_runtime_call_wasm_a.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 798
if _libs["../libs/libiwasm.so"].has("wasm_runtime_call_wasm_v", "cdecl"):
    _func = _libs["../libs/libiwasm.so"].get("wasm_runtime_call_wasm_v", "cdecl")
    _restype = c_bool
    _errcheck = None
    _argtypes = [wasm_exec_env_t, wasm_function_inst_t, uint32_t, POINTER(wasm_val_t), uint32_t]
    wasm_runtime_call_wasm_v = _variadic_function(_func,_restype,_argtypes,_errcheck)

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 818
if _libs["../libs/libiwasm.so"].has("wasm_application_execute_main", "cdecl"):
    wasm_application_execute_main = _libs["../libs/libiwasm.so"].get("wasm_application_execute_main", "cdecl")
    wasm_application_execute_main.argtypes = [wasm_module_inst_t, c_int32, POINTER(POINTER(c_char))]
    wasm_application_execute_main.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 837
if _libs["../libs/libiwasm.so"].has("wasm_application_execute_func", "cdecl"):
    wasm_application_execute_func = _libs["../libs/libiwasm.so"].get("wasm_application_execute_func", "cdecl")
    wasm_application_execute_func.argtypes = [wasm_module_inst_t, String, c_int32, POINTER(POINTER(c_char))]
    wasm_application_execute_func.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 846
if _libs["../libs/libiwasm.so"].has("wasm_runtime_get_exception", "cdecl"):
    wasm_runtime_get_exception = _libs["../libs/libiwasm.so"].get("wasm_runtime_get_exception", "cdecl")
    wasm_runtime_get_exception.argtypes = [wasm_module_inst_t]
    wasm_runtime_get_exception.restype = c_char_p

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 857
if _libs["../libs/libiwasm.so"].has("wasm_runtime_set_exception", "cdecl"):
    wasm_runtime_set_exception = _libs["../libs/libiwasm.so"].get("wasm_runtime_set_exception", "cdecl")
    wasm_runtime_set_exception.argtypes = [wasm_module_inst_t, String]
    wasm_runtime_set_exception.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 866
if _libs["../libs/libiwasm.so"].has("wasm_runtime_clear_exception", "cdecl"):
    wasm_runtime_clear_exception = _libs["../libs/libiwasm.so"].get("wasm_runtime_clear_exception", "cdecl")
    wasm_runtime_clear_exception.argtypes = [wasm_module_inst_t]
    wasm_runtime_clear_exception.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 878
if _libs["../libs/libiwasm.so"].has("wasm_runtime_set_custom_data", "cdecl"):
    wasm_runtime_set_custom_data = _libs["../libs/libiwasm.so"].get("wasm_runtime_set_custom_data", "cdecl")
    wasm_runtime_set_custom_data.argtypes = [wasm_module_inst_t, POINTER(None)]
    wasm_runtime_set_custom_data.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 887
if _libs["../libs/libiwasm.so"].has("wasm_runtime_get_custom_data", "cdecl"):
    wasm_runtime_get_custom_data = _libs["../libs/libiwasm.so"].get("wasm_runtime_get_custom_data", "cdecl")
    wasm_runtime_get_custom_data.argtypes = [wasm_module_inst_t]
    wasm_runtime_get_custom_data.restype = POINTER(c_ubyte)
    wasm_runtime_get_custom_data.errcheck = lambda v,*a : cast(v, c_void_p)

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 910
if _libs["../libs/libiwasm.so"].has("wasm_runtime_module_malloc", "cdecl"):
    wasm_runtime_module_malloc = _libs["../libs/libiwasm.so"].get("wasm_runtime_module_malloc", "cdecl")
    wasm_runtime_module_malloc.argtypes = [wasm_module_inst_t, uint32_t, POINTER(POINTER(None))]
    wasm_runtime_module_malloc.restype = uint32_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 920
if _libs["../libs/libiwasm.so"].has("wasm_runtime_module_free", "cdecl"):
    wasm_runtime_module_free = _libs["../libs/libiwasm.so"].get("wasm_runtime_module_free", "cdecl")
    wasm_runtime_module_free.argtypes = [wasm_module_inst_t, uint32_t]
    wasm_runtime_module_free.restype = None

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 936
if _libs["../libs/libiwasm.so"].has("wasm_runtime_module_dup_data", "cdecl"):
    wasm_runtime_module_dup_data = _libs["../libs/libiwasm.so"].get("wasm_runtime_module_dup_data", "cdecl")
    wasm_runtime_module_dup_data.argtypes = [wasm_module_inst_t, String, uint32_t]
    wasm_runtime_module_dup_data.restype = uint32_t

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 951
if _libs["../libs/libiwasm.so"].has("wasm_runtime_validate_app_addr", "cdecl"):
    wasm_runtime_validate_app_addr = _libs["../libs/libiwasm.so"].get("wasm_runtime_validate_app_addr", "cdecl")
    wasm_runtime_validate_app_addr.argtypes = [wasm_module_inst_t, uint32_t, uint32_t]
    wasm_runtime_validate_app_addr.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 973
if _libs["../libs/libiwasm.so"].has("wasm_runtime_validate_app_str_addr", "cdecl"):
    wasm_runtime_validate_app_str_addr = _libs["../libs/libiwasm.so"].get("wasm_runtime_validate_app_str_addr", "cdecl")
    wasm_runtime_validate_app_str_addr.argtypes = [wasm_module_inst_t, uint32_t]
    wasm_runtime_validate_app_str_addr.restype = c_bool

# wasm-micro-runtime/core/iwasm/include/wasm_export.h: 989
if _libs["../libs/libiwasm.so"].has("wasm_runtime_validate_native_addr", "cdecl"):
    wasm_runtime_validate_native_addr = _libs["../libs/libiwasm.so"].get("wasm_runtime_validate_native_addr", "cdecl")
    wasm_runtime_validate_native_addr.argtypes = [wasm_module_inst_t, POINTER(None), uint32_t]
    wasm_runtime_validate_native_addr.restype = c_bool
